shadow/shadow.css
@font-face {
	font-family: 'ShadowIcons';
	src:url('./ShadowIcons.eot');
	src:url('./ShadowIcons.eot?#iefix') format('embedded-opentype'),
		url('./ShadowIcons.svg#ShadowIcons') format('svg'),
		url('./ShadowIcons.woff') format('woff'),
		url('./ShadowIcons.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

.vixen-video button:after,
.vixen-video button:before {
	font-family: "ShadowIcons";
	font-style: normal;
	font-weight: normal;
	text-decoration: none;
	text-rendering: optimizeLegibility;
	white-space: nowrap;
	speak: none;
	-webkit-font-smoothing: antialiased;
}

.vixen-video, .vixen-video * {
	padding: 0px;
	margin: 0px;
	-moz-box-sizing: border-box;
	-o-box-sizing: border-box;
	box-sizing: border-box;
	color: rgb(174,174,174);
	background-color: transparent;
	border: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}

.vixen-container {
	position: relative;
	overflow: hidden;
	background-color: black;
	min-width: 320px;
	min-height: 30px;
	max-height: 100%;
	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
}

.vixen-container select, .vixen-container select * {
	/* Fix text visibility issues on Windows */
	color: black !important;
}

.vixen-container.vixen-fullscreen {
	position: absolute;
	top: 0px;
	width: 0px;
	height: 100%;
	width: 100%;
}

.vixen-video {
	min-height: 180px;
}

.vixen-video .vixen-header {
	position: absolute;
	min-height: 20%;
	width: 100%;
	padding: 10px;
	z-index: 20;
	color: white;
	
	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.70)), to(rgba(0, 0, 0, 0.00)));
	background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.00));
	background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.00));
	background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.00));
	background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.00));
	background-image: linear-gradient(top, rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.00));
	
	-webkit-transition: opacity linear 250ms;
	-msie-transition: opacity linear 250ms;
	-moz-transition: opacity linear 250ms;
	-o-transition: opacity linear 250ms;
	transition: opacity linear 250ms;
}

.vixen-video .vixen-header h1 {
	float: left;
	pointer-events: none;
	color: white;
	font-size: 13pt;
	text-shadow: black 0px 0px 5px;
	width: 55%;
}

.vixen-playing.vixen-ui-activity-timeout .vixen-header {
	opacity: 0 !important;
}

.vixen-media {
	width: 100%;
	height: auto;
	position: relative;
	top: 0px;
}

.vixen-fullscreen .vixen-media {
	height: 100%;
}

.vixen-toolbar {
	position: absolute;
	bottom: 0px;
	margin-top: 29px;
	height: 29px;
	width: 100%;

	border-top: solid rgb(76,76,76) 1px;
	border-bottom: solid rgb(0,0,0) 1px;
	background-color: rgb(20,20,20);

	box-shadow: rgb(42,42,42) 0px -1px 0px !important;

	/* Gradient. Keeping away from older IE - they can get 'authentically digital'. */
	background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(40, 40, 40)), to(rgb(19, 19, 19)));
	background-image: -webkit-linear-gradient(top, rgb(40, 40, 40), rgb(19, 19, 19));
	background-image: -moz-linear-gradient(top, rgb(40, 40, 40), rgb(19, 19, 19));
	background-image: -o-linear-gradient(top, rgb(40, 40, 40), rgb(19, 19, 19));
	background-image: -ms-linear-gradient(top, rgb(40, 40, 40), rgb(19, 19, 19));
	background-image: linear-gradient(top, rgb(40, 40, 40), rgb(19, 19, 19));
	
	-webkit-transition: opacity linear 250ms;
	-msie-transition: opacity linear 250ms;
	-moz-transition: opacity linear 250ms;
	-o-transition: opacity linear 250ms;
	transition: opacity linear 250ms;
}

.vixen-playing.vixen-ui-activity-timeout .vixen-toolbar {
	opacity: 0;
}

.vixen-toolbar > * {
	float: left;
}

.vixen-toolbar label {
	display: block;
	padding: 0px 4px;
	line-height: 27px;
	font-size: 8pt;
	min-width: 40px;
	text-align: center;
}

.vixen-toolbar button {
	width: 30px;
	overflow: hidden;
	line-height: 28px;
	height: 28px;
	text-align: center;
	color: transparent;
}

.vixen-toolbar button:before {
	text-align: center;
	display: block;
	position:absolute;
	z-index:10;
	width: 30px;
	line-height: 28px;
	content: "\25CE";
	color: rgb(174,174,174);
	pointer-events: none;
	
	font-size: 11pt;
}

.vixen-toolbar button:focus {
	outline: solid white 1px;

	background-image: -webkit-gradient(radial, 50% 50%,0,50% 50%,200, from(rgba(0, 0, 0, 0.00)), to(rgba(0, 0, 0, 0.50)));
	background-image: -webkit-radial-gradient(50% 50%, rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.00));
	background-image: -moz-radial-gradient(50% 50%, rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.00));
	background-image: -o-radial-gradient(50% 50%, rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.00));
	background-image: -ms-radial-gradient(50% 50%, rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.00));
	background-image: radial-gradient(50% 50%, rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.00));
}

.vixen-toolbar button:focus:before,
.vixen-toolbar button:active:before,
.vixen-toolbar button:hover:before {
	color: white;
	text-shadow: white 0px 0px 4px;
}

.vixen-toolbar .vixen-playpause:before {
	content: "\e000";
}

.vixen-playing .vixen-toolbar .vixen-playpause:before {
	content: "\e001";
}

.vixen-toolbar .vixen-fullscreenbutton:before {
	content: "\e002";
}

.vixen-fullscreen .vixen-fullscreenbutton:before {
	content: "\e003";
}
/* ... */

